--- a/public00_wrangle_data.ipynb
+++ b/public00_wrangle_data.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-06T20:21:53.612461Z",
-     "start_time": "2018-11-06T20:21:53.600309Z"
+     "end_time": "2018-11-19T04:55:30.041081Z",
+     "start_time": "2018-11-19T04:55:30.035490Z"
     }
    },
    "outputs": [],
@@ -39,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T17:17:32.350810Z",
-     "start_time": "2018-11-08T17:17:32.328199Z"
+     "end_time": "2018-11-19T04:55:31.033473Z",
+     "start_time": "2018-11-19T04:55:30.225731Z"
     }
    },
    "outputs": [],
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T17:17:32.563698Z",
-     "start_time": "2018-11-08T17:17:32.538158Z"
+     "end_time": "2018-11-19T04:55:31.329850Z",
+     "start_time": "2018-11-19T04:55:31.321077Z"
     }
    },
    "outputs": [],
@@ -4352,7 +4352,8 @@
     "ExecuteTime": {
      "end_time": "2018-11-07T01:03:22.037697Z",
      "start_time": "2018-11-06T21:37:34.492523Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -4573,11 +4574,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-07T19:06:24.265042Z",
-     "start_time": "2018-11-07T19:06:24.237758Z"
+     "end_time": "2018-11-19T04:55:35.603867Z",
+     "start_time": "2018-11-19T04:55:35.596971Z"
     }
    },
    "outputs": [],
@@ -4587,7 +4588,7 @@
     "    BeautifulSoup to extract/return the\n",
     "    lat/long for the stadium'''\n",
     "    soup = BeautifulSoup(\n",
-    "        wikipedia.WikipediaPage(title = s).html()\n",
+    "        wikipedia.WikipediaPage(title = stadium_name).html()\n",
     "    )\n",
     "    geo = soup.findAll('span', {'class':'geo'})\n",
     "    if geo:\n",
@@ -4597,84 +4598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-07T19:09:33.990210Z",
-     "start_time": "2018-11-07T19:06:37.075495Z"
+     "end_time": "2018-11-19T04:58:51.676115Z",
+     "start_time": "2018-11-19T04:55:50.440041Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "U.S. Bank Stadium {'lat': 44.974, 'long': -93.258}\n",
-      "Lincoln Financial Field {'lat': 39.90083, 'long': -75.1675}\n",
-      "Gillette Stadium {'lat': 42.0909444, 'long': -71.2643444}\n",
-      "Heinz Field {'lat': 40.44667, 'long': -80.01583}\n",
-      "Mercedes-Benz Superdome {'lat': 29.95083, 'long': -90.08111}\n",
-      "EverBank Field {'lat': 30.32389, 'long': -81.6375}\n",
-      "Los Angeles Memorial Coliseum {'lat': 34.01417, 'long': -118.28778}\n",
-      "Arrowhead Stadium {'lat': 39.04889, 'long': -94.48389}\n",
-      "Raymond James Stadium {'lat': 27.97583, 'long': -82.50333}\n",
-      "CenturyLink Field {'lat': 47.5952, 'long': -122.3316}\n",
-      "StubHub Center {'lat': 33.864, 'long': -118.261}\n",
-      "M&T Bank Stadium {'lat': 39.27806, 'long': -76.62278}\n",
-      "Nissan Stadium {'lat': 36.16639, 'long': -86.77139}\n",
-      "MetLife Stadium {'lat': 40.813528, 'long': -74.074361}\n",
-      "Hard Rock Stadium {'lat': 25.95806, 'long': -80.23889}\n",
-      "Ford Field {'lat': 42.34, 'long': -83.04556}\n",
-      "Sports Authority Field at Mile High {'lat': 39.74389, 'long': -105.02}\n",
-      "Lucas Oil Stadium {'lat': 39.760056, 'long': -86.163806}\n",
-      "Mercedes-Benz Stadium {'lat': 33.755, 'long': -84.401}\n",
-      "NRG Stadium {'lat': 29.68472, 'long': -95.41083}\n",
-      "FedExField {'lat': 38.90778, 'long': -76.86444}\n",
-      "Levi's Stadium {'lat': 37.403, 'long': -121.97}\n",
-      "AT&T Stadium {'lat': 32.74778, 'long': -97.09278}\n",
-      "University of Phoenix Stadium {'lat': 33.5275, 'long': -112.2625}\n",
-      "Paul Brown Stadium {'lat': 39.095, 'long': -84.516}\n",
-      "Soldier Field {'lat': 41.8623, 'long': -87.6167}\n",
-      "Bank of America Stadium {'lat': 35.22583, 'long': -80.85278}\n",
-      "Lambeau Field {'lat': 44.50139, 'long': -88.06222}\n",
-      "Oakland Coliseum {'lat': 37.75167, 'long': -122.20056}\n",
-      "FirstEnergy Stadium {'lat': 41.50611, 'long': -81.69944}\n",
-      "New Era Field {'lat': 42.774, 'long': -78.787}\n",
-      "Azteca Stadium {'lat': 19.3029111, 'long': -99.1504417}\n",
-      "Twickenham Stadium {'lat': 51.45611, 'long': -0.34167}\n",
-      "Wembley Stadium {'lat': 51.55583, 'long': -0.27972}\n",
-      "Georgia Dome {'lat': 33.758, 'long': -84.401}\n",
-      "Qualcomm Stadium {'lat': 32.78306, 'long': -117.11944}\n",
-      "TCF Bank Stadium {'lat': 44.976, 'long': -93.225}\n",
-      "Sun Life Stadium {'lat': 25.95806, 'long': -80.23889}\n",
-      "Ralph Wilson Stadium {'lat': 42.774, 'long': -78.787}\n",
-      "O.co Coliseum {'lat': 37.75167, 'long': -122.20056}\n",
-      "Edward Jones Dome {'lat': 38.63278, 'long': -90.18861}\n",
-      "LP Field {'lat': 36.16639, 'long': -86.77139}\n",
-      "Mall of America Field {'lat': 44.97389, 'long': -93.25806}\n",
-      "Candlestick Park {'lat': 37.71361, 'long': -122.38611}\n",
-      "Reliant Stadium {'lat': 29.68472, 'long': -95.41083}\n",
-      "Rogers Centre {'lat': 43.64139, 'long': -79.38917}\n",
-      "Cowboys Stadium {'lat': 32.74778, 'long': -97.09278}\n",
-      "Cleveland Browns Stadium {'lat': 41.50611, 'long': -81.69944}\n",
-      "Qwest Field {'lat': 47.5952, 'long': -122.3316}\n",
-      "New Meadowlands Stadium {'lat': 40.813528, 'long': -74.074361}\n",
-      "Louisiana Superdome {'lat': 29.95083, 'long': -90.08111}\n",
-      "Invesco Field at Mile High {'lat': 39.74389, 'long': -105.02}\n",
-      "Oakland-Alameda County Coliseum {'lat': 37.75167, 'long': -122.20056}\n",
-      "Dolphin Stadium {'lat': 25.95806, 'long': -80.23889}\n",
-      "Hubert H. Humphrey Metrodome {'lat': 44.97389, 'long': -93.25806}\n",
-      "Giants Stadium {'lat': 40.81222, 'long': -74.07694}\n",
-      "Jacksonville Municipal Stadium {'lat': 30.32389, 'long': -81.6375}\n",
-      "Texas Stadium {'lat': 32.84, 'long': -96.911}\n",
-      "RCA Dome {'lat': 39.76361, 'long': -86.16333}\n",
-      "McAfee Coliseum {'lat': 37.75167, 'long': -122.20056}\n",
-      "Monster Park {'lat': 37.71361, 'long': -122.38611}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stadiums = read_csv('game_metadata.csv')['stadium'].unique()\n",
+    "stadiums = read_csv('{}/game_metadata.csv'.format(DATA_DIR))['stadium'].unique()\n",
     "stadium_geo = {}\n",
     "for s in stadiums:\n",
     "    stadium_geo[s] = extract_lat_long(s)"
@@ -4682,25 +4615,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T03:04:23.984521Z",
-     "start_time": "2018-11-19T03:04:23.871501Z"
-    },
-    "collapsed": true
+     "end_time": "2018-11-19T04:58:51.711572Z",
+     "start_time": "2018-11-19T04:58:51.679416Z"
+    }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DataFrame' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-e0151456806b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstadium_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstadium_geo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morient\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'index'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mstadium_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'stadium'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mstadium_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mstadium_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stadium_lat_long.csv'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_DIR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DataFrame' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stadium</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AT&amp;T Stadium</th>\n",
+       "      <td>32.747780</td>\n",
+       "      <td>-97.092780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arrowhead Stadium</th>\n",
+       "      <td>39.048890</td>\n",
+       "      <td>-94.483890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Azteca Stadium</th>\n",
+       "      <td>19.302911</td>\n",
+       "      <td>-99.150442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bank of America Stadium</th>\n",
+       "      <td>35.225830</td>\n",
+       "      <td>-80.852780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Candlestick Park</th>\n",
+       "      <td>37.713610</td>\n",
+       "      <td>-122.386110</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               lat        long\n",
+       "stadium                                       \n",
+       "AT&T Stadium             32.747780  -97.092780\n",
+       "Arrowhead Stadium        39.048890  -94.483890\n",
+       "Azteca Stadium           19.302911  -99.150442\n",
+       "Bank of America Stadium  35.225830  -80.852780\n",
+       "Candlestick Park         37.713610 -122.386110"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4920,6 +4915,20 @@
     "divisions_df['season'].value_counts()\n",
     "divisions_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timezones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
