scrubbed any site/proprietary info

--- a/public00_source_and_wrangle_data.ipynb
+++ b/public00_source_and_wrangle_data.ipynb
@@ -66,8 +66,8 @@
     "    * [x] Injuries: URL\n",
     "    * [x] Weekly rank: URL\n",
     "    * [x] Historical lines/scores: URL\n",
-    "    * [x] Play-by-play?: used F-REF (needs to be parsed) but backup link: URL\n",
-    "    * [x] Historical weather: used F-REF but backup link: URL\n",
+    "    * [x] Play-by-play?: (needs to be parsed) but backup link: URL\n",
+    "    * [x] Historical weather: used .. but backup link: URL\n",
     "    * [x] Snap counts (could be helpful with injuries): URL\n",
     "    * [x] Head coach info (# wins, winning %, age)\n",
     "    * [x] Weekly stats -- player/team: URL\n",
