added some bells and whistles to model pipeline

--- a/public04_train_score_evaluate_scaffold.ipynb
+++ b/public04_train_score_evaluate_scaffold.ipynb
@@ -7,10 +7,10 @@
     "# Build a CV Train/Score/Evaluate Scaffold\n",
     "* __note__: this was all move to .py files, and made command-line runnable with one line:\n",
     "      * (from modeling-football-outcomes dir) __src/model_pipeline.sh model_id &__\n",
-    "      * this will generate CV sets, models,\n",
+    "      * this will generate CV sets, models, scores, and evaluation metrics/plots\n",
     "* similar benefits to CI/CD pipeline\n",
-    "  * quickly try and validate new ideas\n",
-    "  * record of all trials, parameters, and results\n",
+    "    * get quick feedback on new ideas\n",
+    "    * record of all trials, parameters, and results\n",
     "* something to build on top of, e.g. feature selection\n",
     "* start with ~1/2 of data\n",
     "  * overfitting will occur--subsetting early mitigates some of this\n",
@@ -1452,7 +1452,7 @@
     "width": "305.455px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
