--- a/public05_generate_configs_execute.ipynb
+++ b/public05_generate_configs_execute.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.824946Z",
-     "start_time": "2019-01-14T23:07:29.985294Z"
+     "end_time": "2019-01-15T22:37:31.718700Z",
+     "start_time": "2019-01-15T22:37:25.790183Z"
     }
    },
    "outputs": [
@@ -58,8 +58,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.835526Z",
-     "start_time": "2019-01-14T23:07:38.829495Z"
+     "end_time": "2019-01-15T22:37:31.730707Z",
+     "start_time": "2019-01-15T22:37:31.724173Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.859187Z",
-     "start_time": "2019-01-14T23:07:38.841531Z"
+     "end_time": "2019-01-15T22:37:31.746126Z",
+     "start_time": "2019-01-15T22:37:31.736281Z"
     }
    },
    "outputs": [
@@ -93,12 +93,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory models/0114_test_ou **EXISTS**\n"
+      "Directory models/0115_test_ou **EXISTS**\n"
      ]
     }
    ],
    "source": [
-    "MODEL_ID = '0114_test_ou'\n",
+    "MODEL_ID = '0115_test_ou'\n",
     "\n",
     "if os.path.exists(MODEL_ID):\n",
     "    print 'Directory models/{} **EXISTS**'.format(MODEL_ID)    \n",
@@ -111,8 +111,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.875843Z",
-     "start_time": "2019-01-14T23:07:38.865988Z"
+     "end_time": "2019-01-15T22:37:31.773027Z",
+     "start_time": "2019-01-15T22:37:31.752565Z"
     }
    },
    "outputs": [],
@@ -136,8 +136,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.900868Z",
-     "start_time": "2019-01-14T23:07:38.883643Z"
+     "end_time": "2019-01-15T22:37:31.803771Z",
+     "start_time": "2019-01-15T22:37:31.779192Z"
     }
    },
    "outputs": [],
@@ -166,8 +166,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.918460Z",
-     "start_time": "2019-01-14T23:07:38.912777Z"
+     "end_time": "2019-01-15T22:37:31.836815Z",
+     "start_time": "2019-01-15T22:37:31.824703Z"
     }
    },
    "outputs": [],
@@ -193,8 +193,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:38.935362Z",
-     "start_time": "2019-01-14T23:07:38.924966Z"
+     "end_time": "2019-01-15T22:37:31.853229Z",
+     "start_time": "2019-01-15T22:37:31.843120Z"
     }
    },
    "outputs": [],
@@ -203,7 +203,7 @@
     "model_dict['label_col'] = 'is_sbr_ou_over'\n",
     "model_dict['pos_labels'] = [1]\n",
     "model_dict['neg_labels'] = [-1]\n",
-    "model_dict['features_list'] = ['season','week_id', 'sbr_ou']"
+    "model_dict['features_list'] = ['season','sbr_ou']"
    ]
   },
   {
@@ -218,8 +218,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:44.262666Z",
-     "start_time": "2019-01-14T23:07:38.942042Z"
+     "end_time": "2019-01-15T22:37:34.985100Z",
+     "start_time": "2019-01-15T22:37:31.860892Z"
     }
    },
    "outputs": [],
@@ -295,8 +295,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:44.275803Z",
-     "start_time": "2019-01-14T23:07:44.269044Z"
+     "end_time": "2019-01-15T22:37:34.997529Z",
+     "start_time": "2019-01-15T22:37:34.991248Z"
     }
    },
    "outputs": [],
@@ -316,8 +316,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:44.303812Z",
-     "start_time": "2019-01-14T23:07:44.281794Z"
+     "end_time": "2019-01-15T22:37:35.017879Z",
+     "start_time": "2019-01-15T22:37:35.003451Z"
     }
    },
    "outputs": [],
@@ -372,8 +372,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:44.365551Z",
-     "start_time": "2019-01-14T23:07:44.314692Z"
+     "end_time": "2019-01-15T22:37:35.089669Z",
+     "start_time": "2019-01-15T22:37:35.023730Z"
     }
    },
    "outputs": [],
@@ -452,8 +452,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:44.380772Z",
-     "start_time": "2019-01-14T23:07:44.370357Z"
+     "end_time": "2019-01-15T22:37:35.105080Z",
+     "start_time": "2019-01-15T22:37:35.094950Z"
     }
    },
    "outputs": [],
@@ -487,8 +487,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.883134Z",
-     "start_time": "2019-01-14T23:07:44.384891Z"
+     "end_time": "2019-01-15T22:37:36.540036Z",
+     "start_time": "2019-01-15T22:37:35.107863Z"
     }
    },
    "outputs": [],
@@ -520,8 +520,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.896786Z",
-     "start_time": "2019-01-14T23:07:45.888241Z"
+     "end_time": "2019-01-15T22:37:36.552488Z",
+     "start_time": "2019-01-15T22:37:36.544654Z"
     }
    },
    "outputs": [],
@@ -545,8 +545,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.908616Z",
-     "start_time": "2019-01-14T23:07:45.901343Z"
+     "end_time": "2019-01-15T22:37:36.563333Z",
+     "start_time": "2019-01-15T22:37:36.557242Z"
     }
    },
    "outputs": [],
@@ -568,8 +568,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.922454Z",
-     "start_time": "2019-01-14T23:07:45.914935Z"
+     "end_time": "2019-01-15T22:37:36.574363Z",
+     "start_time": "2019-01-15T22:37:36.568076Z"
     }
    },
    "outputs": [],
@@ -593,8 +593,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.944970Z",
-     "start_time": "2019-01-14T23:07:45.930485Z"
+     "end_time": "2019-01-15T22:37:36.584681Z",
+     "start_time": "2019-01-15T22:37:36.578888Z"
     }
    },
    "outputs": [],
@@ -621,8 +621,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.958348Z",
-     "start_time": "2019-01-14T23:07:45.952129Z"
+     "end_time": "2019-01-15T22:37:36.594570Z",
+     "start_time": "2019-01-15T22:37:36.589212Z"
     }
    },
    "outputs": [],
@@ -643,8 +643,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.976154Z",
-     "start_time": "2019-01-14T23:07:45.965159Z"
+     "end_time": "2019-01-15T22:37:36.605606Z",
+     "start_time": "2019-01-15T22:37:36.599175Z"
     }
    },
    "outputs": [],
@@ -678,8 +678,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:45.990006Z",
-     "start_time": "2019-01-14T23:07:45.982657Z"
+     "end_time": "2019-01-15T22:37:36.615409Z",
+     "start_time": "2019-01-15T22:37:36.610225Z"
     }
    },
    "outputs": [],
@@ -699,8 +699,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:46.005919Z",
-     "start_time": "2019-01-14T23:07:45.996599Z"
+     "end_time": "2019-01-15T22:37:36.624823Z",
+     "start_time": "2019-01-15T22:37:36.619773Z"
     }
    },
    "outputs": [],
@@ -727,8 +727,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:46.020735Z",
-     "start_time": "2019-01-14T23:07:46.011461Z"
+     "end_time": "2019-01-15T22:37:36.636258Z",
+     "start_time": "2019-01-15T22:37:36.629410Z"
     }
    },
    "outputs": [],
@@ -752,8 +752,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:07:46.036686Z",
-     "start_time": "2019-01-14T23:07:46.027213Z"
+     "end_time": "2019-01-15T22:37:36.645942Z",
+     "start_time": "2019-01-15T22:37:36.641027Z"
     }
    },
    "outputs": [],
@@ -763,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:14:29.273943Z",
-     "start_time": "2019-01-14T23:13:46.285274Z"
+     "end_time": "2019-01-15T22:38:21.177090Z",
+     "start_time": "2019-01-15T22:37:36.650620Z"
     },
     "run_control": {
-     "marked": true
+     "marked": false
     },
     "scrolled": true
    },
@@ -778,10 +778,10 @@
     {
      "data": {
       "text/plain": [
-       "'0114_test_ou'"
+       "'0115_test_ou'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,27 +791,27 @@
      "text": [
       "Check JSON files\n",
       "\n",
-      "real\t0m13.501s\n",
-      "user\t0m27.034s\n",
-      "sys\t0m2.278s\n",
+      "real\t0m13.812s\n",
+      "user\t0m27.367s\n",
+      "sys\t0m2.324s\n",
       "\n",
       "Cross-validation data\n",
       "\n",
-      "real\t0m15.272s\n",
-      "user\t0m40.564s\n",
-      "sys\t0m2.314s\n",
+      "real\t0m16.554s\n",
+      "user\t0m42.666s\n",
+      "sys\t0m2.568s\n",
       "\n",
       "Train and score\n",
       "\n",
-      "real\t0m3.082s\n",
-      "user\t0m2.070s\n",
-      "sys\t0m0.977s\n",
+      "real\t0m3.419s\n",
+      "user\t0m2.137s\n",
+      "sys\t0m1.037s\n",
       "\n",
       "Evaluate and plot\n",
       "\n",
-      "real\t0m8.134s\n",
-      "user\t0m6.824s\n",
-      "sys\t0m1.408s\n"
+      "real\t0m7.778s\n",
+      "user\t0m6.705s\n",
+      "sys\t0m1.280s\n"
      ]
     }
    ],
@@ -827,11 +827,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T23:13:12.157331Z",
-     "start_time": "2019-01-14T23:13:12.029774Z"
+     "end_time": "2019-01-15T22:38:21.318781Z",
+     "start_time": "2019-01-15T22:38:21.182961Z"
     }
    },
    "outputs": [
@@ -839,23 +839,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes/src/check_json_files.py\", line 88, in <module>\r\n",
-      "    assert type(model_dict['model_cv_to_use']) is str\r\n",
-      "AssertionError\r\n"
+      "JSON configuration files passed checks.\r\n",
+      "cv sets wrote successfully.\r\n",
+      "True\r\n",
+      "successfully completed evaluation and plotting.\r\n"
      ]
     }
    ],
    "source": [
     "!cat /Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes/models/{MODEL_ID}/logs/out"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
