--- a/public04_train_score_evaluate_pipeline.ipynb
+++ b/public04_train_score_evaluate_pipeline.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## TODO\n",
-    "* #### feature importance and contribution\n",
+    "* #### feature contribution\n",
     "* #### feature and model selection\n",
     "* move functions to .py files\n",
     "* save models to disk\n",
@@ -1600,7 +1600,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "305.453px"
+    "width": "305.438px"
    },
    "toc_section_display": true,
    "toc_window_display": true
