pushed sklearn test model

--- a/public05_generate_configs_execute.ipynb
+++ b/public05_generate_configs_execute.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.718700Z",
-     "start_time": "2019-01-15T22:37:25.790183Z"
+     "end_time": "2019-01-16T06:10:24.675474Z",
+     "start_time": "2019-01-16T06:10:19.028864Z"
     }
    },
    "outputs": [
@@ -58,8 +58,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.730707Z",
-     "start_time": "2019-01-15T22:37:31.724173Z"
+     "end_time": "2019-01-16T06:10:24.686650Z",
+     "start_time": "2019-01-16T06:10:24.680932Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.746126Z",
-     "start_time": "2019-01-15T22:37:31.736281Z"
+     "end_time": "2019-01-16T06:10:24.699658Z",
+     "start_time": "2019-01-16T06:10:24.692154Z"
     }
    },
    "outputs": [
@@ -93,12 +93,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory models/0115_test_ou **EXISTS**\n"
+      "Directory models/0115_test_spread_sklearn **EXISTS**\n"
      ]
     }
    ],
    "source": [
-    "MODEL_ID = '0115_test_ou'\n",
+    "MODEL_ID = '0115_test_spread_sklearn'\n",
     "\n",
     "if os.path.exists(MODEL_ID):\n",
     "    print 'Directory models/{} **EXISTS**'.format(MODEL_ID)    \n",
@@ -111,8 +111,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.773027Z",
-     "start_time": "2019-01-15T22:37:31.752565Z"
+     "end_time": "2019-01-16T06:10:24.721043Z",
+     "start_time": "2019-01-16T06:10:24.705962Z"
     }
    },
    "outputs": [],
@@ -136,8 +136,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.803771Z",
-     "start_time": "2019-01-15T22:37:31.779192Z"
+     "end_time": "2019-01-16T06:10:24.756636Z",
+     "start_time": "2019-01-16T06:10:24.733606Z"
     }
    },
    "outputs": [],
@@ -166,14 +166,14 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.836815Z",
-     "start_time": "2019-01-15T22:37:31.824703Z"
+     "end_time": "2019-01-16T06:10:24.772102Z",
+     "start_time": "2019-01-16T06:10:24.765182Z"
     }
    },
    "outputs": [],
    "source": [
-    "model_dict['features_tbl'] = 'features.0111_ou_test'\n",
-    "model_dict['labels_tbl'] = 'labels.0111_ou_test'"
+    "model_dict['features_tbl'] = 'features.0109_test'\n",
+    "model_dict['labels_tbl'] = 'labels.0109_test'"
    ]
   },
   {
@@ -193,17 +193,26 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:31.853229Z",
-     "start_time": "2019-01-15T22:37:31.843120Z"
+     "end_time": "2019-01-16T06:10:24.789803Z",
+     "start_time": "2019-01-16T06:10:24.778682Z"
     }
    },
    "outputs": [],
    "source": [
-    "model_dict['index'] = ['game_id']\n",
-    "model_dict['label_col'] = 'is_sbr_ou_over'\n",
+    "model_dict['index'] = ['game_id','team_id']\n",
+    "model_dict['label_col'] = 'did_win'\n",
     "model_dict['pos_labels'] = [1]\n",
     "model_dict['neg_labels'] = [-1]\n",
-    "model_dict['features_list'] = ['season','sbr_ou']"
+    "model_dict['features_list'] = [\n",
+    "        'season',\n",
+    "        'week_id',\n",
+    "        'is_home',\n",
+    "        'dave_or_wtddvoa',\n",
+    "        'offensedvoa',\n",
+    "        'defensedvoa',\n",
+    "        's_t_dvoa'\n",
+    "    ]\n",
+    "model_dict['features_list'].sort()"
    ]
   },
   {
@@ -218,8 +227,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:34.985100Z",
-     "start_time": "2019-01-15T22:37:31.860892Z"
+     "end_time": "2019-01-16T06:10:27.903765Z",
+     "start_time": "2019-01-16T06:10:24.796171Z"
     }
    },
    "outputs": [],
@@ -295,13 +304,13 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:34.997529Z",
-     "start_time": "2019-01-15T22:37:34.991248Z"
+     "end_time": "2019-01-16T06:10:27.913364Z",
+     "start_time": "2019-01-16T06:10:27.908783Z"
     }
    },
    "outputs": [],
    "source": [
-    "model_dict['model_cv_to_use'] = None"
+    "model_dict['model_cv_to_use'] = '0114_test'"
    ]
   },
   {
@@ -316,8 +325,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:35.017879Z",
-     "start_time": "2019-01-15T22:37:35.003451Z"
+     "end_time": "2019-01-16T06:10:27.930198Z",
+     "start_time": "2019-01-16T06:10:27.918095Z"
     }
    },
    "outputs": [],
@@ -372,18 +381,14 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:35.089669Z",
-     "start_time": "2019-01-15T22:37:35.023730Z"
+     "end_time": "2019-01-16T06:10:27.991920Z",
+     "start_time": "2019-01-16T06:10:27.935086Z"
     }
    },
    "outputs": [],
    "source": [
-    "assert (model_dict['model_cv_to_use'] is None) \\\n",
-    "        | (type(model_dict['model_cv_to_use']) is str)\n",
-    "\n",
-    "## TODO: when loading the CV sets, ensure that set(load cvs) - set(current df) is empty\n",
-    "\n",
     "if model_dict['model_cv_to_use']:\n",
+    "    assert type(model_dict['model_cv_to_use']) in [str, unicode]\n",
     "    assert os.path.exists(model_dict['model_cv_to_use'])\n",
     "else:\n",
     "    ## assert the data structures/types are correct\n",
@@ -452,26 +457,28 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:35.105080Z",
-     "start_time": "2019-01-15T22:37:35.094950Z"
+     "end_time": "2019-01-16T06:10:28.006464Z",
+     "start_time": "2019-01-16T06:10:27.997753Z"
     }
    },
    "outputs": [],
    "source": [
-    "model_dict['model'] = 'xgboost.XGBClassifier'\n",
+    "model_dict['model'] = 'sklearn.ensemble.GradientBoostingClassifier'\n",
     "model_dict['model_params'] = {\n",
-    "    'n_jobs': 1, \n",
+    "    ### GBT: XGBOOST AND SKLEARN\n",
     "    'learning_rate': 0.1, \n",
     "    'n_estimators': 200, \n",
     "    'max_features': 'auto', \n",
-    "    'booster': 'gbtree', \n",
-    "    'silent': True, \n",
-    "    'nthread': None, \n",
     "    'subsample': 0.9, \n",
     "    'random_state': 9, \n",
-    "    'objective': 'binary:logistic', \n",
     "    'max_depth': 3, \n",
-    "    'gamma': 0\n",
+    "    ### GBT: XGBOOST ONLY\n",
+    "#     'gamma': 0,\n",
+    "#     'objective': 'binary:logistic', \n",
+    "#     'n_jobs': 1, \n",
+    "#     'booster': 'gbtree', \n",
+    "#     'silent': True, \n",
+    "#     'nthread': None, \n",
     "}"
    ]
   },
@@ -487,8 +494,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.540036Z",
-     "start_time": "2019-01-15T22:37:35.107863Z"
+     "end_time": "2019-01-16T06:10:29.026973Z",
+     "start_time": "2019-01-16T06:10:28.012313Z"
     }
    },
    "outputs": [],
@@ -520,8 +527,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.552488Z",
-     "start_time": "2019-01-15T22:37:36.544654Z"
+     "end_time": "2019-01-16T06:10:29.040506Z",
+     "start_time": "2019-01-16T06:10:29.032346Z"
     }
    },
    "outputs": [],
@@ -545,8 +552,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.563333Z",
-     "start_time": "2019-01-15T22:37:36.557242Z"
+     "end_time": "2019-01-16T06:10:29.053058Z",
+     "start_time": "2019-01-16T06:10:29.045906Z"
     }
    },
    "outputs": [],
@@ -568,8 +575,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.574363Z",
-     "start_time": "2019-01-15T22:37:36.568076Z"
+     "end_time": "2019-01-16T06:10:29.076483Z",
+     "start_time": "2019-01-16T06:10:29.059541Z"
     }
    },
    "outputs": [],
@@ -593,8 +600,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.584681Z",
-     "start_time": "2019-01-15T22:37:36.578888Z"
+     "end_time": "2019-01-16T06:10:29.103416Z",
+     "start_time": "2019-01-16T06:10:29.089633Z"
     }
    },
    "outputs": [],
@@ -621,8 +628,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.594570Z",
-     "start_time": "2019-01-15T22:37:36.589212Z"
+     "end_time": "2019-01-16T06:10:29.117053Z",
+     "start_time": "2019-01-16T06:10:29.110050Z"
     }
    },
    "outputs": [],
@@ -643,8 +650,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.605606Z",
-     "start_time": "2019-01-15T22:37:36.599175Z"
+     "end_time": "2019-01-16T06:10:29.136430Z",
+     "start_time": "2019-01-16T06:10:29.123673Z"
     }
    },
    "outputs": [],
@@ -678,8 +685,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.615409Z",
-     "start_time": "2019-01-15T22:37:36.610225Z"
+     "end_time": "2019-01-16T06:10:29.160660Z",
+     "start_time": "2019-01-16T06:10:29.146086Z"
     }
    },
    "outputs": [],
@@ -699,8 +706,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.624823Z",
-     "start_time": "2019-01-15T22:37:36.619773Z"
+     "end_time": "2019-01-16T06:10:29.176252Z",
+     "start_time": "2019-01-16T06:10:29.168370Z"
     }
    },
    "outputs": [],
@@ -727,8 +734,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.636258Z",
-     "start_time": "2019-01-15T22:37:36.629410Z"
+     "end_time": "2019-01-16T06:10:29.192801Z",
+     "start_time": "2019-01-16T06:10:29.182820Z"
     }
    },
    "outputs": [],
@@ -752,22 +759,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:37:36.645942Z",
-     "start_time": "2019-01-15T22:37:36.641027Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# foo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-15T22:38:21.177090Z",
-     "start_time": "2019-01-15T22:37:36.650620Z"
+     "end_time": "2019-01-16T06:11:12.219142Z",
+     "start_time": "2019-01-16T06:10:29.199040Z"
     },
     "run_control": {
      "marked": false
@@ -778,10 +771,10 @@
     {
      "data": {
       "text/plain": [
-       "'0115_test_ou'"
+       "'0115_test_spread_sklearn'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,27 +784,27 @@
      "text": [
       "Check JSON files\n",
       "\n",
-      "real\t0m13.812s\n",
-      "user\t0m27.367s\n",
-      "sys\t0m2.324s\n",
+      "real\t0m13.650s\n",
+      "user\t0m28.411s\n",
+      "sys\t0m2.172s\n",
       "\n",
       "Cross-validation data\n",
       "\n",
-      "real\t0m16.554s\n",
-      "user\t0m42.666s\n",
-      "sys\t0m2.568s\n",
+      "real\t0m13.015s\n",
+      "user\t0m28.832s\n",
+      "sys\t0m1.843s\n",
       "\n",
       "Train and score\n",
       "\n",
-      "real\t0m3.419s\n",
-      "user\t0m2.137s\n",
-      "sys\t0m1.037s\n",
+      "real\t0m5.114s\n",
+      "user\t0m3.485s\n",
+      "sys\t0m1.097s\n",
       "\n",
       "Evaluate and plot\n",
       "\n",
-      "real\t0m7.778s\n",
-      "user\t0m6.705s\n",
-      "sys\t0m1.280s\n"
+      "real\t0m8.358s\n",
+      "user\t0m6.702s\n",
+      "sys\t0m1.300s\n"
      ]
     }
    ],
@@ -827,11 +820,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-15T22:38:21.318781Z",
-     "start_time": "2019-01-15T22:38:21.182961Z"
+     "end_time": "2019-01-16T06:11:12.366406Z",
+     "start_time": "2019-01-16T06:11:12.226367Z"
     }
    },
    "outputs": [
@@ -841,7 +834,6 @@
      "text": [
       "JSON configuration files passed checks.\r\n",
       "cv sets wrote successfully.\r\n",
-      "True\r\n",
       "successfully completed evaluation and plotting.\r\n"
      ]
     }
