feature engineering directory and initial notebook

--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "### General\n",
     "\n",
-    "### Priorities\n",
+    "### Priorities Legend\n",
     "* &#x1F6A8;\t - high priority\n",
     "* &#x23F8; - medium priority\n",
     "* &#x270B; - low priority\n",
@@ -180,9 +180,9 @@
     "* &#x23F3; position players' rankings\n",
     "\n",
     "### Spread\n",
-    "* raw spread\n",
-    "* team's records in games with roughly this spread\n",
-    "* historic cover rate at this spread"
+    "* &#x1F6A8; raw spread\n",
+    "* &#x23F8; team's records in games with roughly this spread\n",
+    "* &#x23F8; historic cover rate at this spread"
    ]
   },
   {
