--- a/initialize.ipynb
+++ b/initialize.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-11T05:42:49.045251Z",
-     "start_time": "2019-01-11T05:42:42.697748Z"
+     "end_time": "2019-01-18T03:04:26.106883Z",
+     "start_time": "2019-01-18T03:04:25.976657Z"
     }
    },
    "outputs": [
@@ -28,6 +28,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -51,8 +61,15 @@
     "%matplotlib inline\n",
     "\n",
     "spark.sql('USE football_games')\n",
-    "os.chdir('../football_data')"
+    "os.chdir('/Users/joshplotkin/Dropbox/data_science/football_data')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
