fixed minor bug in table creation

--- a/public_er_diagram.ipynb
+++ b/public_er_diagram.ipynb
@@ -17,8 +17,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:00.871681Z",
-     "start_time": "2019-01-20T23:06:55.741846Z"
+     "end_time": "2019-01-20T23:14:12.823921Z",
+     "start_time": "2019-01-20T23:14:07.411948Z"
     }
    },
    "outputs": [
@@ -80,8 +80,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:00.883061Z",
-     "start_time": "2019-01-20T23:07:00.876730Z"
+     "end_time": "2019-01-20T23:14:12.834998Z",
+     "start_time": "2019-01-20T23:14:12.828690Z"
     }
    },
    "outputs": [],
@@ -106,8 +106,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:02.078233Z",
-     "start_time": "2019-01-20T23:07:00.888555Z"
+     "end_time": "2019-01-20T23:14:14.536570Z",
+     "start_time": "2019-01-20T23:14:12.841755Z"
     }
    },
    "outputs": [],
@@ -125,8 +125,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:02.091145Z",
-     "start_time": "2019-01-20T23:07:02.084329Z"
+     "end_time": "2019-01-20T23:14:14.547498Z",
+     "start_time": "2019-01-20T23:14:14.541148Z"
     }
    },
    "outputs": [],
@@ -147,8 +147,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:13.117568Z",
-     "start_time": "2019-01-20T23:07:02.098494Z"
+     "end_time": "2019-01-20T23:14:26.401447Z",
+     "start_time": "2019-01-20T23:14:14.551887Z"
     }
    },
    "outputs": [],
@@ -194,8 +194,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:13.248665Z",
-     "start_time": "2019-01-20T23:07:13.123745Z"
+     "end_time": "2019-01-20T23:14:26.481405Z",
+     "start_time": "2019-01-20T23:14:26.407414Z"
     }
    },
    "outputs": [],
@@ -217,8 +217,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:13.325555Z",
-     "start_time": "2019-01-20T23:07:13.254701Z"
+     "end_time": "2019-01-20T23:14:26.558979Z",
+     "start_time": "2019-01-20T23:14:26.487804Z"
     }
    },
    "outputs": [],
@@ -261,27 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:14.779658Z",
-     "start_time": "2019-01-20T23:07:13.330855Z"
+     "end_time": "2019-01-20T23:14:53.218520Z",
+     "start_time": "2019-01-20T23:14:52.072054Z"
     }
    },
    "outputs": [],
    "source": [
     "CONNECT_STR=\"'postgresql+psycopg2://joshplotkin@localhost:5432/football_data'\"\n",
     "!export DYLD_LIBRARY_PATH=/usr/local/Cellar/openssl@1.1/1.1.1a/lib && \\\n",
-    "  eralchemy -i {CONNECT_STR} -o er_diagram.png --exclude-tables temp audit"
+    "  eralchemy -i {CONNECT_STR} -o img/er_diagram.png --exclude-tables temp audit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:07:14.817005Z",
-     "start_time": "2019-01-20T23:07:14.786992Z"
+     "end_time": "2019-01-20T23:14:54.308324Z",
+     "start_time": "2019-01-20T23:14:54.286538Z"
     }
    },
    "outputs": [
@@ -292,13 +292,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename='er_diagram.png') "
+    "Image(filename='img/er_diagram.png') "
    ]
   }
  ],
