fixed minor bug in table creation

--- a/public_er_diagram.ipynb
+++ b/public_er_diagram.ipynb
@@ -17,23 +17,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:12.823921Z",
-     "start_time": "2019-01-20T23:14:07.411948Z"
+     "end_time": "2019-01-20T23:44:47.283336Z",
+     "start_time": "2019-01-20T23:44:40.666495Z"
     }
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container {width:90% !important;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -46,19 +34,9 @@
     }
    ],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "\n",
-    "import pyspark.sql.functions as F\n",
-    "\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "from IPython.core.display import display, HTML\n",
     "from IPython.display import Image\n",
-    "InteractiveShell.ast_node_interactivity = \"all\"\n",
-    "display(HTML('<style>.container {width:90% !important;}</style>'))\n",
     "\n",
-    "spark.sql('CREATE DATABASE IF NOT EXISTS football_games')\n",
-    "spark.sql('USE football_games')"
+    "spark.sql('use football_games')"
    ]
   },
   {
@@ -80,8 +58,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:12.834998Z",
-     "start_time": "2019-01-20T23:14:12.828690Z"
+     "end_time": "2019-01-20T23:44:47.296032Z",
+     "start_time": "2019-01-20T23:44:47.288884Z"
     }
    },
    "outputs": [],
@@ -106,8 +84,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:14.536570Z",
-     "start_time": "2019-01-20T23:14:12.841755Z"
+     "end_time": "2019-01-20T23:44:48.882541Z",
+     "start_time": "2019-01-20T23:44:47.302666Z"
     }
    },
    "outputs": [],
@@ -125,8 +103,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:14.547498Z",
-     "start_time": "2019-01-20T23:14:14.541148Z"
+     "end_time": "2019-01-20T23:44:48.894534Z",
+     "start_time": "2019-01-20T23:44:48.888367Z"
     }
    },
    "outputs": [],
@@ -147,8 +125,146 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:26.401447Z",
-     "start_time": "2019-01-20T23:14:14.551887Z"
+     "end_time": "2019-01-20T23:44:49.500118Z",
+     "start_time": "2019-01-20T23:44:48.899795Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>database</th>\n",
+       "      <th>tableName</th>\n",
+       "      <th>isTemporary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>coach</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>dvoa</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>game</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>game_line</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>game_metadata</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>game_outcome</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>games_denorm</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>over_under_labels</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>stadium</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>team</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>team_game_line_labels</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>football_games</td>\n",
+       "      <td>team_season</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          database              tableName  isTemporary\n",
+       "0   football_games                  coach        False\n",
+       "1   football_games                   dvoa        False\n",
+       "2   football_games                   game        False\n",
+       "3   football_games              game_line        False\n",
+       "4   football_games          game_metadata        False\n",
+       "5   football_games           game_outcome        False\n",
+       "6   football_games           games_denorm        False\n",
+       "7   football_games      over_under_labels        False\n",
+       "8   football_games                stadium        False\n",
+       "9   football_games                   team        False\n",
+       "10  football_games  team_game_line_labels        False\n",
+       "11  football_games            team_season        False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.sql('show tables').toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-20T23:45:07.074285Z",
+     "start_time": "2019-01-20T23:44:49.505811Z"
     }
    },
    "outputs": [],
@@ -191,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:26.481405Z",
-     "start_time": "2019-01-20T23:14:26.407414Z"
+     "end_time": "2019-01-20T23:45:07.160408Z",
+     "start_time": "2019-01-20T23:45:07.078806Z"
     }
    },
    "outputs": [],
@@ -214,11 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:26.558979Z",
-     "start_time": "2019-01-20T23:14:26.487804Z"
+     "end_time": "2019-01-20T23:45:07.224536Z",
+     "start_time": "2019-01-20T23:45:07.165948Z"
     }
    },
    "outputs": [],
@@ -261,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:53.218520Z",
-     "start_time": "2019-01-20T23:14:52.072054Z"
+     "end_time": "2019-01-20T23:45:08.445569Z",
+     "start_time": "2019-01-20T23:45:07.229796Z"
     }
    },
    "outputs": [],
@@ -277,11 +393,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T23:14:54.308324Z",
-     "start_time": "2019-01-20T23:14:54.286538Z"
+     "end_time": "2019-01-20T23:45:08.481303Z",
+     "start_time": "2019-01-20T23:45:08.450836Z"
     }
    },
    "outputs": [
@@ -292,7 +408,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
